kubernetes/apps/flux-system/flux-operator/instance/webhook/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webhook-receiver
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  hostnames:
    - flux-webhook.zebernst.dev
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /hook/
